--- a/_config.yml
+++ b/_config.yml
@@ -201,7 +201,7 @@ kramdown:
 # Collections
 collections:
   teaching:
-    output: true
+    output: False
     permalink: /:collection/:path/
   publications:
     output: true
@@ -210,7 +210,7 @@ collections:
     output: False
     permalink: /:collection/:path/
   talks:
-    output: true
+    output: False
     permalink: /:collection/:path/
 
 
