--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Tuo Kaiwen"
   pronouns         : # example: "she/her"  
-  bio              : # "Short biography for the left-hand sidebar"
+  bio              : "Tongji University, CS"
   location         : "Shanghai, China"
-  employer         : "Tongji University"
+  employer         : # "Tongji University"
   uri              : # URL
   email            : "cfintuo@gmail.com" 
 
@@ -45,7 +45,7 @@ author:
   dribbble         : # Username
   github           : "CFinTech"
   kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  stackoverflow    : 23287916  
 
   # Social media
   bluesky          : # "bsky.app" # Replace this with you Bluesky username
