--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=9ZvQ8bQAAAAJ&hl=zh-CN"
   impactstory      : # URL
   orcid            : # "http://orcid.org/yourorcidurl"
   semantic         : # URL
@@ -45,7 +45,7 @@ author:
   dribbble         : # Username
   github           : "CFinTech"
   kaggle           : # Username  
-  stackoverflow    : 23287916  
+  stackoverflow    : # 23287916  
 
   # Social media
   bluesky          : # "bsky.app" # Replace this with you Bluesky username
